crates/model/tests/compile_fail/entity_empty_body.rs
// entity! with empty body and no resource group annotation should fail.
quent_model::entity! {
    Other {}
}

fn main() {}
