crates/model/tests/compile_fail/entity_empty_body.stderr
error: entity! requires `attributes: { ... }` or `events: { ... }`
 --> tests/compile_fail/entity_empty_body.rs:3:5
  |
3 |     Other {}
  |     ^^^^^
